--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>金凤针织后台管理系统</title>
+  <title>合肥友友志钢贸CMS</title>
   <link rel="icon" href="/favicon.png" type="image/x-icon">
 </head>
 
