--- a/src/routes/Customer/orderAddStyle.less
+++ b/src/routes/Customer/orderAddStyle.less
@@ -1,12 +1,48 @@
 @import "~antd/lib/style/themes/default.less";
 
+
+.firstRow {
+  margin-bottom: 2%;
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+}
+
+.customer {
+  flex:1;
+}
+
+.orderTitle {
+  flex:2;
+  text-align: center;
+  text-decoration: underline;
+  font-size: medium;
+}
+
+.car {
+  flex:1;
+}
+
+.factory {
+  margin-bottom: 2%;
+}
+
+.contract {
+  margin-bottom: 2%;
+}
+
+.orderCorporation {
+  font-size: large;
+  text-align: center;
+  font-weight: bolder;
+}
+
 .stepsContent {
   margin-top: 16px;
   border: 1px dashed #e9e9e9;
   border-radius: 6px;
   background-color: #fafafa;
   min-height: 300px;
-  text-align: center;
   padding-top: 5px;
 }
 
